--- a/app/connectors/pom.xml
+++ b/app/connectors/pom.xml
@@ -75,6 +75,7 @@
     <module>connectors/jms/activemq-connectors</module>
     <module>connectors/jms/amqp-connector</module>
     <module>connectors/odata</module>
+    <module>connectors/oauth</module>
   </modules>
 
   <dependencyManagement>
