--- a/app/connectors/pom.xml
+++ b/app/connectors/pom.xml
@@ -77,6 +77,7 @@
     <module>connectors/jms/amqp-connector</module>
     <module>connectors/odata</module>
 	<module>connectors/ftp</module>
+	<module>connectors/box-connector</module>
   </modules>
 
   <dependencyManagement>
