--- a/app/verifier/pom.xml
+++ b/app/verifier/pom.xml
@@ -248,6 +248,12 @@
       <version>${project.version}</version>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>io.syndesis.connector</groupId>
+      <artifactId>connector-box</artifactId>
+      <version>${project.version}</version>
+      <scope>runtime</scope>
+    </dependency>
     
     <dependency>
       <groupId>io.syndesis.connector</groupId>
