--- a/app/ui/package.json
+++ b/app/ui/package.json
@@ -44,8 +44,10 @@
     "@ngrx/store-devtools": "^4.1.1",
     "@types/moment": "^2.13.0",
     "angular2-text-mask": "^8.0.1",
+    "apicurio-design-studio": "../../../apicurio-studio/front-end/studio/dist.tgz",
     "better-npm-run": "^0.0.15",
     "bootstrap": "3.3.7",
+    "brace": "^0.11.1",
     "core-js": "^2.5.1",
     "file-saver": "^1.3.3",
     "jquery": "3.1.1",
@@ -55,6 +57,8 @@
     "ng2-file-upload": "1.3.0",
     "ngx-bootstrap": "^2.0.2",
     "ngx-chips": "^1.6.2",
+    "oai-ts-commands": "^0.2.28",
+    "oai-ts-core": "^0.2.15",
     "patternfly": "3.26.1",
     "patternfly-ng": "^3.0.0",
     "pluralize": "5.0.0",
@@ -63,6 +67,7 @@
     "ts-helpers": "1.1.2",
     "typescript-logging": "0.4.0",
     "url": "^0.11.0",
+    "yamljs": "^0.3.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
