--- a/app/common/model/pom.xml
+++ b/app/common/model/pom.xml
@@ -71,6 +71,11 @@
       <artifactId>findbugs-annotations</artifactId>
     </dependency>
 
+	<dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-ext</artifactId>
+    </dependency>
+
     <!-- === Test ============================================================================ -->
 
     <dependency>
