--- a/app/integration/pom.xml
+++ b/app/integration/pom.xml
@@ -115,6 +115,7 @@
     <module>component-proxy</module>
     <module>runtime</module>
     <module>project-generator</module>
+    <module>image</module>
   </modules>
 
 </project>
