--- a/app/server/logging/jsondb/pom.xml
+++ b/app/server/logging/jsondb/pom.xml
@@ -114,6 +114,12 @@
       <scope>runtime</scope>
     </dependency>
 
+    <dependency>
+      <groupId>net.bytebuddy</groupId>
+      <artifactId>byte-buddy</artifactId>
+      <version>1.8.15</version>
+    </dependency>
+
     <!-- === Testing Dependencies ======================================================== -->
 
     <dependency>
